增加缺省页
